--- a/css/styles.scss
+++ b/css/styles.scss
@@ -11,6 +11,9 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
+
+@import url('https://fonts.googleapis.com/css2?family=Rye&display=swap');
+
 $color-primary: #3046C5;
 $color-secondary: #5637dd;
 $color-pale: #CEC8FF;
@@ -19,7 +22,7 @@ $color-dark: #60106b;
 $color-black-transparent: rgba(0, 0, 0, 0.5);
 
 $body-font: "Open Sans", sans-serif;
-$header-font: "Lobster", cursive;
+$header-font: "Rye", cursive;
 
 :root {
   --bs-blue: #0d6efd;
